carousel mostly working now. small fixes to arrows still to be made to mirror "next" button completely. split navbar and carousel into seperate sass files because they are substantial chunk of css. Giving me a headach having to go up and down that darn file

--- a/index.html
+++ b/index.html
@@ -97,32 +97,20 @@
         </div>
       </div>
     </div>
-    <!-- <div class="container">
-      <img class="container__flex1 container--align-right siema-arrow" id="prev" src="build/images/back.svg" alt="back">
-      <img class="container__flex1 container--align-left siema-arrow" id="next" src="build/images/next.svg" alt="next">
-    </div> -->
-<!--  -->
   <ul class='container'>
-    <li class="container__flex1" id="back">
+    <li class="container__flex1 container--align-right" id="back">
       <a class='animated-arrow animated-arrow--previous'>
-<span class='main'>
-<span class='text'>
-  Back
-</span>
-
-        <span class='arrow arrow__left arrow__left--previous'>
-          <span class='shaft'></span>
-        </span>
-        <!-- <span class='main'> -->
-          <!-- <span class='text'>
+        <span class='main'>
+          <span class='text'>
             Back
-          </span> -->
-</span>
-
-          <span class='arrow arrow__right arrow__right--previous'>
+          </span>
+          <span class='arrow arrow__left arrow__left--previous'>
             <span class='shaft'></span>
           </span>
-        <!-- </span> -->
+        </span>
+        <span class='arrow arrow__right arrow__right--previous'>
+          <span class='shaft'></span>
+        </span>
       </a>
     </li>
     <li class="container__flex1 container--align-left" id="next">
