--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Fira+Sans:300" rel="stylesheet">
   <script src="build/js/bundle.js" charset="utf-8"></script>
   <title>James Theo: Web Developer</title>
+  <link href="data:image/x-icon;base64,AAABAAEAEBACAAAAAACwAAAAFgAAACgAAAAQAAAAIAAAAAEAAQAAAAAAQAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAPv/AAAAAAADwAAAD/AAABw4AAA73AAAN+wAAHfuAAB//gAAeZ4AAHmeAAA//AAAP/wAAB/4AAAP8AAAA8AAAAAAAAD8PwAA8A8AAOAHAADAAwAAgAEAAIABAAAAAAAAAAAAAAAAAAAAAAAAgAEAAIABAADAAwAA4AcAAPAPAAD8PwAA"
+  rel="icon" type="image/x-icon" />
 </head>
 <body>
   <header>
     <div class="navbar-icon-container">
-      <a href="#" class="navbar-icon__button [ js-navbar-button ]">
+      <a class="navbar-icon__button [ js-navbar-button ]">
         <svg class="navbar-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
           <g fill="none" fill-rule="evenodd" stroke="#979797">
             <path d="M13,26.5 L88,26.5" />
@@ -37,55 +39,53 @@
       </div>
     </nav>
   </header >
+  
   <div id="name" class="name-container">
     <h1 class="name-container__text">James Theo</h1>
     <p class="name-container__text name-container__text--sml">Front-end Developer</p>
   </div>
-
-  <section id="p5" class="container content content__p5 content--vw-100">
+  <section id="p5" class="container content content__p5">
     <div id="canvas-container" class="container__center">
       <!-- canvas element created and appended here through p5.js library -->
     </div>
   </section>
 
-  <section class="content content__about" id="about">
-    <h1>Why you should hire me?</h1>
-    <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
-    thinking and creativity in my work. After being introduced to the world of coding by close friends, I realised the
-    potential it offered for me to be creative and build programs that would give me a rewarding sense of fulfilment.</p>
+  <section class="content content__about container" id="about">
+    <div class="container__center">
+      <h1>Why you should hire me?</h1>
+      <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thought and creativity in my work. I love programming. I hate programming.<a class="about-link" href="https://github.com/aparkinbotswana/sketch" target="_blank"> I enjoy doing it in my own time.</a><a class="about-link" href="https://github.com/aparkinbotswana/p5-class-tutorial" target="_blank"> I enjoy doing it in my own time</a></p>
+    </div>
   </section>
  
   <section id="projects" class="content content__projects">
     <h1>Projects</h1>
     <div class="siema">
-      <div id="auslanInterpreterContent">
+      <div>
         <h2>Leap Motion Virtual Auslan Interpreter</h2>
         <p>The Auslan Interpreter is a JavaScript app, designed to help those who are unable to understand Australian Sign Language, communicate with those who can. The app uses the Leap Motion to interpret hand gestures from the user. The program recognises the gesture and displays, as well as speaks the recognised letter.</p>
-        <!-- <figure class="figure-container">
-          <iframe class="figure-container__responsive" id="iframe" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
+        <figure class="figure-container">
+          <iframe class="figure-container__responsive" src="https://www.youtube.com/embed/Swy6URGIUbA" frameborder="0" allow="autoplay; encrypted-media"
               allowfullscreen></iframe>
-        </figure> -->
+        </figure>
         <div class="button-container">
-          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter"
-            target="_blank" alt="Auslan Interpreter github link">Code</a>
+          <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/Auslan-Interpreter" target="_blank" alt="Auslan Interpreter github link">Code</a>
         </div>
       </div>
 
-      <!-- <div id="usernameCheckerContent">
-        <h2 class="projects-description">Username Checker</h2>
-        <h3>React/Webpack</h3>
-        <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question.</p>
+      <div>
+        <h2>Username Checker</h2>
+        <p>Created using React and Webpack, this browser app currently checks if the input text is availble as a username for either Twitter, Instagram or Github. It will also inform the user if they have input invalid characters specific to either of the websites</p>
         <figure class="figure-container">
-          <img class="figure-container__responsive" src="" alt="Username Checker image">
+          <img class="figure-container__responsive" src="build/images/usernameChecker.jpg" alt="Username Checker image">
         </figure>
         <div class="button-container">
           <a class="button-container__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
           <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
-      </div> -->
+      </div>
 
-      <div id="fragaContent" >
-        <h2 class="projects-description">Fråga</h2>
+      <div>
+        <h2>Fråga</h2>
         <p>Social app with a focus on geolocation. Users can post any question they like relevant to a particular location. Other users within the vicinity can see and respond to the question. Created in JavaScript & Ruby on Rails</p>
         <figure class="figure-container">
           <img class="figure-container__responsive" src="build/images/Fraga.png" alt="Fraga project image">
