added some content. fixed some mobile issues with the arrows

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
   <section class="content content__about container" id="about">
     <div class="container__center">
       <h1>Why you should hire me?</h1>
-      <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical thought and creativity in my work. I love programming. I hate programming.<a class="about-link" href="https://github.com/aparkinbotswana/sketch" target="_blank"> I enjoy doing it in my own time.</a><a class="about-link" href="https://github.com/aparkinbotswana/p5-class-tutorial" target="_blank"> I enjoy doing it in my own time</a></p>
+      <p>I’m a motivated and dedicated front-end web developer who loves having a nice balance of problem solving, logical
+      thought and creativity in my work. I love programming and the feeling of achievement and satisfaction you get when
+      your work finally starts taking shape. I hate programming and the endless frustration that comes with it.<a class="about-link"
+      href="https://github.com/aparkinbotswana/p5-class-tutorial" target="_blank"> I enjoy doing it in my own time.</a> I
+      have found that experimenting with side projects is a great way to learn. What fascinates me most in the coding space is how<a class="about-link"
+      href="https://github.com/aparkinbotswana/sketch" target="_blank"> users can interact with websites.</a> This is largely due to my interest with the Leap Motion and animation libraries such as p5.js and three.js. Technologies like these can create a fantastic user experience and I look forward to experimenting with them and learning more about similar technologies as my career continues.
+      Ultimately, I hope to find myself in an environment that will challenge me and help me learn more about coding.</p>
     </div>
   </section>
  
@@ -128,7 +134,6 @@
         </span>
       </a>
     </li>
-
   </ul>
   </section>
 
