took out username checker part

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div>
+      <!-- <div>
         <h2>Username Checker</h2>
         <p>Created using React and Webpack, this browser app currently checks if the input text is availble as a username for either Twitter, Instagram or Github. It will also inform the user if they have input invalid characters specific to either of the websites</p>
         <figure class="figure-container">
@@ -88,7 +88,7 @@
           <a class="button-container__link" href="https://aparkinbotswana.github.io/username-checker/" target="_blank" alt="Username Checker demo link">Demo</a>
           <a class="button-container__link button-container__link--ghost" href="https://github.com/aparkinbotswana/username-checker" target="_blank" alt="Username Checker github link">Code</a>
         </div>
-      </div>
+      </div> -->
 
       <div>
         <h2>Fråga</h2>
